--- a/scss/base/_typogrophy.scss
+++ b/scss/base/_typogrophy.scss
@@ -1,27 +1,27 @@
 @font-face {
   font-family: 'rubikLight';
-  src: url(../../fonts/Rubik/Rubik-Light.ttf);
+  src: url(../fonts/Rubik/Rubik-Light.ttf);
   font-display: swap;
 
 }
 
 @font-face {
   font-family: 'rubikBold';
-  src: url(../../fonts/Rubik/Rubik-Bold.ttf);
+  src: url(../fonts/Rubik/Rubik-Bold.ttf);
   font-display: swap;
 
 }
 
 @font-face {
   font-family: 'rubik';
-  src: url(../../fonts/Rubik/Rubik-Medium.ttf);
+  src: url(../fonts/Rubik/Rubik-Medium.ttf);
   font-display: swap;
 
 }
 
 @font-face {
   font-family: 'rubikRegular';
-  src: url(../../fonts/Rubik/Rubik-Regular.ttf);
+  src: url(../fonts/Rubik/Rubik-Regular.ttf);
   font-display: swap;
 
 }
