--- a/scss/layout/main-page/_carousel-section.scss
+++ b/scss/layout/main-page/_carousel-section.scss
@@ -115,6 +115,7 @@
             border-radius: 10px;
             font-size: 0.8rem;
             padding-block: 0.5rem;
+            cursor: pointer;
         }
     }
 }
