--- a/scss/layout/main-page/_footer-section.scss
+++ b/scss/layout/main-page/_footer-section.scss
@@ -16,6 +16,8 @@
 
         @include respond(mini-desktop) {
             margin-block-end: 4rem;
+            display: none;
+            width: 100%;
         }
 
         & p {
