--- a/scss/layout/main-page/_top-section.scss
+++ b/scss/layout/main-page/_top-section.scss
@@ -7,9 +7,10 @@
         padding-block-start: 12rem;
 
         @include respond(mini-desktop) {
-            height: 10rem;
-            padding-inline-start: 10rem;
-            padding-inline-end: 10rem;
+            // height: 10rem;
+            padding-inline-start: 1rem;
+            padding-inline-end: 1rem;
+            width: 95vw;
         }
     }
 
@@ -59,18 +60,28 @@
         width: 60%;
 
         @include respond(mini-desktop) {
-            gap: 3rem;
+            gap: 1rem;
         }
 
         & p.text-green {
             font-size: 1.5rem;
             line-height: initial;
+
+            @include respond(mini-desktop) {
+                font-size: 4.5rem;
+                line-height: 4.5rem;
+            }
         }
 
         &-title {
             position: relative;
             font-size: 8.5rem;
             line-height: 8.5rem;
+
+            @include respond(mini-desktop) {
+                font-size: 11rem;
+                line-height: 10.5rem;
+            }
 
             &-above {
                 position: absolute;
