--- a/scss/layout/main-page/_top-section.scss
+++ b/scss/layout/main-page/_top-section.scss
@@ -10,7 +10,23 @@
             // height: 10rem;
             padding-inline-start: 1rem;
             padding-inline-end: 1rem;
-            width: 95vw;
+            width: 100vw;
+
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            // grid-template-rows: 1fr 25%;
+            gap: 0px 0px;
+            grid-template-areas:
+                "top-left top-right"
+                "top-mobile top-mobile";
+        }
+    }
+
+    &-mobile {
+        @include respond(mini-desktop) {
+            width: 170%;
+            text-align: center;
+            margin-inline: 15%;
         }
     }
 
@@ -24,7 +40,9 @@
         width: 40%;
         text-align: end;
 
-        @include respond(mini-desktop) {}
+        @include respond(mini-desktop) {
+            width: 100%;
+        }
 
         &-item {
             // margin-block-start: 4rem;
@@ -61,6 +79,7 @@
 
         @include respond(mini-desktop) {
             gap: 1rem;
+            width: 100%;
         }
 
         & p.text-green {
@@ -125,12 +144,23 @@
                 font-size: 2.9rem;
                 padding: 0 1rem;
                 line-height: initial;
+
+                @include respond(mini-desktop) {
+                    padding: 1rem;
+                    font-size: 6rem;
+                }
             }
         }
 
         &-subscribe {
             font-size: 1.5rem;
             line-height: initial;
+
+            @include respond(mini-desktop) {
+                font-family: 'rubikLight', sans-serif;
+                font-size: 4rem;
+                line-height: 4.5rem;
+            }
         }
 
         // &-item {
