--- a/scss/layout/main-page/_about-section.scss
+++ b/scss/layout/main-page/_about-section.scss
@@ -13,11 +13,15 @@
         // border: 1px solid red;
 
         @include respond(mini-desktop) {
+            width: 90vw;
+            margin: auto;
             flex-direction: column;
             padding-block-end: 4rem;
             padding-inline-start: 5rem;
             padding-inline-end: 5rem;
             height: auto;
+            border: 1px solid #000000;
+            overflow: visible;
         }
     }
 
@@ -29,10 +33,22 @@
         transform: translate(25%, -10%);
         z-index: 1;
 
+        @include respond(mini-desktop) {
+            width: 100%;
+            transform: translate(52%, -30%);
+            top: 0;
+            right: 50%;
+        }
+
         &-image {
             width: 24rem;
             height: 12rem;
             z-index: -1;
+
+            @include respond(mini-desktop) {
+                width: 100%;
+                height: auto;
+            }
         }
 
         & .centered {
@@ -43,12 +59,15 @@
             transform: translate(-75%, -60%);
             text-align: center;
             color: $color-black;
+
+            @include respond(mini-desktop) {
+                transform: translate(-50%, -50%);
+            }
         }
     }
 
     &-left {
         position: relative;
-        border: 1px solid #000000;
         text-align: center;
         overflow: visible;
         padding: 2rem;
@@ -56,9 +75,19 @@
         padding-inline-start: 5rem;
         width: 72%;
 
+        @include respond(mini-desktop) {
+            width: 100%;
+            margin-top: -10rem;
+        }
+
         p {
             font-size: 1.2rem;
             line-height: 1.2rem;
+
+            @include respond(mini-desktop) {
+                font-size: 3.6rem;
+                line-height: 4rem;
+            }
         }
 
         & a {
@@ -71,6 +100,13 @@
             left: 50%;
             bottom: 0;
             text-decoration: none;
+
+            @include respond(mini-desktop) {
+                transform: translate(-50%, 100%);
+                font-size: 4.5rem;
+                padding-block: 1rem;
+                width: 88%;
+            }
         }
     }
 
@@ -78,12 +114,23 @@
         font-size: 2.5rem;
         line-height: initial;
         // color: $color-black;
+
+        @include respond(mini-desktop) {
+            font-size: 8.5rem;
+            margin: auto;
+        }
     }
 
     &-subtitle {
         color: $color-white;
         font-size: 1.5rem;
         line-height: initial;
+
+        @include respond(mini-desktop) {
+            font-size: 5rem;
+            margin: auto;
+            width: 60%;
+        }
     }
 
 
