--- a/scss/layout/main-page/_about-section.scss
+++ b/scss/layout/main-page/_about-section.scss
@@ -22,6 +22,7 @@
             height: auto;
             border: 1px solid #000000;
             overflow: visible;
+            margin-top: 15rem;
         }
     }
 
@@ -46,8 +47,9 @@
             z-index: -1;
 
             @include respond(mini-desktop) {
-                width: 100%;
+                width: 109%;
                 height: auto;
+                transform: translate(4.5%, -5%);
             }
         }
 
@@ -61,7 +63,7 @@
             color: $color-black;
 
             @include respond(mini-desktop) {
-                transform: translate(-50%, -50%);
+                transform: translate(-50%, -18.5rem);
             }
         }
     }
@@ -77,7 +79,8 @@
 
         @include respond(mini-desktop) {
             width: 100%;
-            margin-top: -10rem;
+            margin-top: -15rem;
+            margin-bottom: 5rem;
         }
 
         p {
@@ -102,7 +105,7 @@
             text-decoration: none;
 
             @include respond(mini-desktop) {
-                transform: translate(-50%, 100%);
+                transform: translate(-50%, 14rem);
                 font-size: 4.5rem;
                 padding-block: 1rem;
                 width: 88%;
@@ -118,6 +121,7 @@
         @include respond(mini-desktop) {
             font-size: 8.5rem;
             margin: auto;
+            margin-block-end: 2rem;
         }
     }
 
@@ -127,9 +131,10 @@
         line-height: initial;
 
         @include respond(mini-desktop) {
-            font-size: 5rem;
+            font-size: 5.5rem;
+            line-height: 5.5rem;
             margin: auto;
-            width: 60%;
+            width: 80%;
         }
     }
 
