--- a/scss/layout/main-page/_top-section.scss
+++ b/scss/layout/main-page/_top-section.scss
@@ -3,28 +3,34 @@
         display: flex;
         width: 60vw;
         margin: auto;
-        // padding-inline-start: 6rem;
         padding-block-start: 12rem;
 
         @include respond(mini-desktop) {
             // height: 10rem;
+            flex-direction: column;
+            align-items: center;
             padding-inline-start: 1rem;
             padding-inline-end: 1rem;
             width: 100vw;
-
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            // grid-template-rows: 1fr 25%;
             gap: 0px 0px;
-            grid-template-areas:
-                "top-left top-right"
-                "top-mobile top-mobile";
         }
+
+        // & .circle {
+        //     @include respond(mini-desktop) {
+        //         width: 24rem !important;
+        //         height: 24rem !important;
+        //         right: 15rem;
+        //         top: 0;
+        //         padding-inline: 2rem;
+        //         text-align: center;
+        //     }
+
+        // }
     }
 
     &-mobile {
         @include respond(mini-desktop) {
-            width: 170%;
+            width: 90%;
             text-align: center;
             margin-inline: 15%;
         }
@@ -41,6 +47,7 @@
         text-align: end;
 
         @include respond(mini-desktop) {
+            position: absolute;
             width: 100%;
         }
 
@@ -62,6 +69,14 @@
                 position: absolute;
                 top: -9%;
                 right: -12%;
+
+                @include respond(mini-desktop) {
+                    width: 60rem;
+                    height: auto;
+                    position: absolute;
+                    top: 22rem;
+                    right: -16rem;
+                }
             }
         }
 
@@ -79,7 +94,16 @@
 
         @include respond(mini-desktop) {
             gap: 1rem;
-            width: 100%;
+            width: 48.5rem;
+            margin-inline-start: 27rem;
+        }
+
+        &-logo {
+            & img {
+                object-fit: contain;
+                width: auto;
+                margin-block-end: 13rem;
+            }
         }
 
         & p.text-green {
@@ -111,6 +135,11 @@
                 top: 50%;
                 right: 12%;
                 transform: translateY(-50%);
+
+                @include respond(mini-desktop) {
+                    font-size: 4rem;
+                    line-height: 4rem;
+                }
             }
         }
 
@@ -125,6 +154,11 @@
                 font-weight: 100;
                 font-size: 8rem;
                 line-height: 6rem;
+
+                @include respond(mini-desktop) {
+                    font-size: 10.5rem;
+                    line-height: 9.5rem;
+                }
             }
 
             & h2 {
@@ -134,11 +168,20 @@
                 text-align: right;
                 width: min-content;
                 padding-inline-start: 0.7rem;
+
+                @include respond(mini-desktop) {
+                    font-size: 4rem;
+                    line-height: 3.5rem;
+                }
             }
         }
 
         &-sale {
             width: auto;
+
+            @include respond(mini-desktop) {
+                margin-block-end: 1.5rem;
+            }
 
             & p {
                 font-size: 2.9rem;
@@ -158,7 +201,7 @@
 
             @include respond(mini-desktop) {
                 font-family: 'rubikLight', sans-serif;
-                font-size: 4rem;
+                font-size: 4.5rem;
                 line-height: 4.5rem;
             }
         }
