--- a/scss/index.scss
+++ b/scss/index.scss
@@ -14,5 +14,6 @@
 @import "layout/main-page/about-section";
 @import "layout/main-page/advantage-section";
 @import "layout/main-page/cta-section";
+@import "layout/main-page/mobile-cta";
 @import "layout/main-page/footer-section";
 @import "layout/thank-you-page";
