mobile close to finish, carousel

--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -13,10 +13,11 @@
 }
 
 .u-mobile {
-  display: none;
+  display: none !important;
 
   @include respond(mini-desktop) {
-    display: block;
+    display: block !important;
+
   }
 }
 
