--- a/scss/layout/main-page/_advantage-section.scss
+++ b/scss/layout/main-page/_advantage-section.scss
@@ -18,6 +18,7 @@
             padding-inline-start: 5rem;
             padding-inline-end: 5rem;
             margin-block-start: 18rem;
+            margin-block-end: 20rem;
         }
     }
 
