change top image size

--- a/scss/layout/main-page/_carousel-section.scss
+++ b/scss/layout/main-page/_carousel-section.scss
@@ -186,6 +186,7 @@
             min-height: 45rem;
             display: flex;
             justify-content: center;
+            padding-inline-start: 5rem;
         }
     }
 
