--- a/scss/layout/main-page/_footer-section.scss
+++ b/scss/layout/main-page/_footer-section.scss
@@ -70,6 +70,7 @@
         top: 11rem;
         padding-inline: 2rem;
         text-align: center;
+        z-index: -2;
     }
 
     &-percentage {
