--- a/scss/layout/main-page/_footer-section.scss
+++ b/scss/layout/main-page/_footer-section.scss
@@ -15,36 +15,68 @@
         // border: 1px solid red;
 
         @include respond(mini-desktop) {
+            padding-block-start: 0;
             margin-block-end: 4rem;
             display: none;
             width: 100%;
+            z-index: 20;
         }
 
-        & p {
-            @include respond(mini-desktop) {
-                font-size: 4rem;
-                line-height: initial;
+        & .close {
+            font-size: 5rem;
+            line-height: 5rem;
+            position: absolute;
+            top: 3rem;
+            right: 3rem;
+            color: white;
+            border: 1px solid;
+            width: 8rem;
+            height: 8rem;
+            border-radius: 50%;
+            display: flex !important;
+            align-items: center;
+            justify-content: center;
+        }
+
+        &.mobile {
+            .circle {
+                display: none !important;
             }
         }
-
     }
 
     &-logo {
         width: 11.41rem;
         height: auto;
         padding-block-end: 5.5rem;
+
+        @include respond(mini-desktop) {
+            width: 29.41rem;
+            height: auto;
+            padding-block-end: 11.5rem;
+            margin-block-start: 12rem;
+        }
     }
 
     &-title {
         font-size: 1.35rem;
         line-height: initial;
         padding-inline: 2rem;
+
+        @include respond(mini-desktop) {
+            font-size: 5rem;
+        }
     }
 
     &-subtitle {
         font-size: 1rem;
         line-height: initial;
         padding-inline: 2.5rem;
+
+        @include respond(mini-desktop) {
+            font-size: 4rem;
+            padding-block-end: 11.5rem;
+        }
     }
 }
 
@@ -67,10 +99,11 @@
         width: 24rem;
         height: 24rem;
         right: 12rem;
-        top: 11rem;
+        top: 15rem;
         padding-inline: 2rem;
         text-align: center;
         z-index: -2;
+
     }
 
     &-percentage {
@@ -110,6 +143,11 @@
             padding-inline-start: 2rem;
             padding-inline-end: 2rem;
             padding-block-start: 2rem;
+
+            @include respond(mini-desktop) {
+                font-size: 4.5rem;
+                padding-block-end: 11.5rem;
+            }
         }
     }
 
@@ -122,6 +160,11 @@
             color: white;
             font-size: 1rem;
             padding-block-end: 0.5rem;
+
+            @include respond(mini-desktop) {
+                font-size: 5.5rem;
+                margin-bottom: 6rem;
+            }
 
             &:focus+label {
                 color: white;
@@ -142,6 +185,11 @@
             padding-block-end: 0.5rem;
             cursor: pointer;
 
+            @include respond(mini-desktop) {
+                font-size: 5.5rem;
+                margin-bottom: 6rem;
+            }
+
             &:focus+label {
                 color: white;
             }
@@ -161,6 +209,12 @@
             margin-block-start: 2rem;
             margin-block-end: 2rem;
             cursor: pointer;
+
+            @include respond(mini-desktop) {
+                font-size: 5.5rem;
+                padding-block: 3rem;
+                margin-block-end: 11rem;
+            }
         }
     }
 
@@ -196,10 +250,23 @@
         flex-direction: column;
         margin-block-end: 1rem;
 
+        @include respond(mini-desktop) {
+            & a {
+                font-size: 4rem;
+                line-height: initial;
+            }
+
+            & p {
+                font-size: 4rem;
+                line-height: initial;
+            }
+
+        }
+
         a:link {
             color: $color-white;
             text-decoration: none;
-            font-size: 1rem;
+            font-size: 4rem;
         }
 
         /* visited link */
