--- a/scss/layout/main-page/_top-section.scss
+++ b/scss/layout/main-page/_top-section.scss
@@ -15,17 +15,6 @@
             gap: 0px 0px;
         }
 
-        // & .circle {
-        //     @include respond(mini-desktop) {
-        //         width: 24rem !important;
-        //         height: 24rem !important;
-        //         right: 15rem;
-        //         top: 0;
-        //         padding-inline: 2rem;
-        //         text-align: center;
-        //     }
-
-        // }
     }
 
     &-mobile {
@@ -74,8 +63,8 @@
                     width: 69%;
                     height: auto;
                     position: absolute;
-                    top: 22rem;
-                    right: -16rem;
+                    top: 27rem;
+                    right: -18rem;
                     z-index: -1;
                 }
             }
@@ -96,7 +85,7 @@
         @include respond(mini-desktop) {
             gap: 1rem;
             width: 48.5rem;
-            margin-inline-start: 27rem;
+            margin-inline-start: 20rem;
         }
 
         &-logo {
@@ -104,6 +93,12 @@
                 object-fit: contain;
                 width: auto;
                 margin-block-end: 13rem;
+
+                @include respond(mini-desktop) {
+                    margin-block-end: 13rem;
+                    width: 29.41rem;
+                    height: auto;
+                }
             }
         }
 
