--- a/css/index.css
+++ b/css/index.css
@@ -795,7 +795,7 @@ body:not(.tabbed) *:focus {
 
 @media only screen and (max-width: 66.875em) {
   .carousel {
-    padding-inline-start: 10rem;
+    padding-inline-start: 8rem;
   }
 }
 
@@ -989,6 +989,10 @@ body:not(.tabbed) *:focus {
 
 .slick-list {
   direction: ltr;
+}
+
+.slick-list.draggable {
+  padding-inline-start: 3rem;
 }
 
 .slick-dots {
