--- a/scss/layout/main-page/_carousel-section.scss
+++ b/scss/layout/main-page/_carousel-section.scss
@@ -5,7 +5,7 @@
     overflow: visible;
 
     @include respond(mini-desktop) {
-        padding-inline-start: 10rem;
+        padding-inline-start: 8rem;
     }
 
     &-section {
@@ -196,6 +196,10 @@
 
     &-list {
         direction: ltr;
+
+        &.draggable {
+            padding-inline-start: 3rem;
+        }
     }
 
     &-dots {
