--- a/scss/abstract/_mixins.scss
+++ b/scss/abstract/_mixins.scss
@@ -14,7 +14,7 @@
 }
 
 @mixin inputBasic {
-  font-family: 'rubik', sans-serif;
+  font-family: 'robik', sans-serif;
   height: 9rem;
   border: none;
   border-radius: 10rem;
@@ -34,7 +34,7 @@
 }
 
 @mixin submitBasic($color) {
-  font-family: 'rubik-bold', sans-serif;
+  font-family: 'robik-bold', sans-serif;
   position: relative;
   height: 10rem;
   border: none;
@@ -72,7 +72,7 @@
   padding: 0.6rem 1rem;
   text-align: center;
   font-size: 1.125rem;
-  font-family: "rubik", sans-serif;
+  font-family: "robik", sans-serif;
   align-items: center;
   cursor: pointer;
   position: relative;
@@ -123,7 +123,7 @@ $breakpoint argument choices
 -phone-small
 -phone
 -tab-port
--mini-desktop
+-tab-port
 -tab-land
 -small-desktop
 -big-desktop
