--- a/scss/layout/main-page/_about-section.scss
+++ b/scss/layout/main-page/_about-section.scss
@@ -12,7 +12,7 @@
 
         // border: 1px solid red;
 
-        @include respond(mini-desktop) {
+        @include respond(tab-port) {
             width: 90vw;
             margin: auto;
             flex-direction: column;
@@ -27,6 +27,10 @@
     }
 
     &-right {
+        @include respond(big-desktop-min) {
+            transform: translate(0%, -10%)
+        }
+
         position: relative;
         display: block;
         width: 28%;
@@ -34,7 +38,7 @@
         transform: translate(25%, -10%);
         z-index: 1;
 
-        @include respond(mini-desktop) {
+        @include respond(tab-port) {
             width: 100%;
             transform: translate(52%, -30%);
             top: 0;
@@ -46,7 +50,7 @@
             height: 12rem;
             z-index: -1;
 
-            @include respond(mini-desktop) {
+            @include respond(tab-port) {
                 width: 109%;
                 height: auto;
                 transform: translate(6rem, 0rem);
@@ -54,6 +58,10 @@
         }
 
         & .centered {
+            @include respond(big-desktop-min) {
+                transform: translate(-63%, -60%)
+            }
+
             position: absolute;
             width: 100%;
             top: 50%;
@@ -62,7 +70,7 @@
             text-align: center;
             color: $color-black;
 
-            @include respond(mini-desktop) {
+            @include respond(tab-port) {
                 transform: translate(-50%, -15.5rem);
             }
         }
@@ -78,7 +86,7 @@
         width: 72%;
         border: 1px solid;
 
-        @include respond(mini-desktop) {
+        @include respond(tab-port) {
             width: 100%;
             margin-top: -15rem;
             margin-bottom: 5rem;
@@ -89,7 +97,7 @@
             font-size: 1.2rem;
             line-height: 1.2rem;
 
-            @include respond(mini-desktop) {
+            @include respond(tab-port) {
                 font-size: 3.6rem;
                 line-height: 4rem;
             }
@@ -106,7 +114,7 @@
             bottom: 0;
             text-decoration: none;
 
-            @include respond(mini-desktop) {
+            @include respond(tab-port) {
                 transform: translate(-50%, 14rem);
                 font-size: 4.5rem;
                 padding-block: 1rem;
@@ -120,7 +128,7 @@
         line-height: initial;
         // color: $color-black;
 
-        @include respond(mini-desktop) {
+        @include respond(tab-port) {
             font-size: 8.5rem;
             margin: auto;
             margin-block-end: 2rem;
@@ -128,11 +136,15 @@
     }
 
     &-subtitle {
+        @include respond(big-desktop-min) {
+            margin-inline: 2rem;
+        }
+
         color: $color-white;
         font-size: 1.5rem;
         line-height: initial;
 
-        @include respond(mini-desktop) {
+        @include respond(tab-port) {
             font-size: 5.5rem;
             line-height: 5.5rem;
             margin: auto;
