--- a/scss/layout/main-page/_footer-section.scss
+++ b/scss/layout/main-page/_footer-section.scss
@@ -14,7 +14,7 @@
 
         // border: 1px solid red;
 
-        @include respond(mini-desktop) {
+        @include respond(tab-port) {
             padding-block-start: 0;
             margin-block-end: 4rem;
             display: none;
@@ -23,19 +23,23 @@
         }
 
         & .close {
-            font-size: 5rem;
-            line-height: 5rem;
-            position: absolute;
-            top: 3rem;
-            right: 3rem;
-            color: white;
-            border: 1px solid;
-            width: 8rem;
-            height: 8rem;
-            border-radius: 50%;
-            display: flex !important;
-            align-items: center;
-            justify-content: center;
+
+
+            @include respond(tab-port) {
+                font-size: 5rem;
+                line-height: 5rem;
+                position: absolute;
+                top: 3rem;
+                right: 3rem;
+                color: white;
+                border: 1px solid;
+                width: 8rem;
+                height: 8rem;
+                border-radius: 50%;
+                display: flex !important;
+                align-items: center;
+                justify-content: center;
+            }
         }
 
         &.mobile {
@@ -50,7 +54,7 @@
         height: auto;
         padding-block-end: 5.5rem;
 
-        @include respond(mini-desktop) {
+        @include respond(tab-port) {
             width: 29.41rem;
             height: auto;
             padding-block-end: 11.5rem;
@@ -63,7 +67,7 @@
         line-height: initial;
         padding-inline: 2rem;
 
-        @include respond(mini-desktop) {
+        @include respond(tab-port) {
             font-size: 5rem;
         }
     }
@@ -73,7 +77,7 @@
         line-height: initial;
         padding-inline: 2.5rem;
 
-        @include respond(mini-desktop) {
+        @include respond(tab-port) {
             font-size: 4rem;
             padding-block-end: 11.5rem;
         }
@@ -94,7 +98,7 @@
     transform: translate(50%, 35%);
     padding-inline: 0.5rem;
 
-    @include respond(mini-desktop) {
+    @include respond(tab-port) {
         display: flex !important;
         width: 24rem;
         height: 24rem;
@@ -111,7 +115,7 @@
         font-size: 1.5rem;
         line-height: 1.5rem;
 
-        @include respond(mini-desktop) {
+        @include respond(tab-port) {
             font-size: 4rem;
             line-height: 4rem;
         }
@@ -123,7 +127,7 @@
         line-height: 1rem;
         font-weight: 100;
 
-        @include respond(mini-desktop) {
+        @include respond(tab-port) {
             font-size: 3rem;
             line-height: 3rem;
         }
@@ -144,10 +148,47 @@
             padding-inline-end: 2rem;
             padding-block-start: 2rem;
 
-            @include respond(mini-desktop) {
+            @include respond(tab-port) {
                 font-size: 4.5rem;
                 padding-block-end: 11.5rem;
             }
+        }
+    }
+
+    & .message {
+        opacity: 0;
+        width: 100%;
+        margin-block-start: 1rem;
+        margin-block-end: 1rem;
+        text-align: center;
+
+        transition: all 0.3s;
+
+        @include respond(mini-desktop) {
+            font-size: 3.9rem;
+            width: 100%;
+            margin-block-start: 2rem;
+            margin-block-end: 2rem;
+        }
+
+        &.error {
+            font-family: 'rubikBold', sans-serif;
+            position: absolute;
+            width: 76%;
+            transform: translateX(50%);
+            top: 65%;
+            right: 50%;
+            opacity: 1;
+            border: 2px solid $error-border;
+            background: rgb(51, 12, 15);
+            text-align: center;
+            border-radius: 10px;
+            padding: 1rem;
+            margin-top: 1rem;
+            line-height: initial;
+            color: $color-white;
+            // color: #ef4a4a;
+            font-size: 1rem;
         }
     }
 
@@ -161,7 +202,7 @@
             font-size: 1rem;
             padding-block-end: 0.5rem;
 
-            @include respond(mini-desktop) {
+            @include respond(tab-port) {
                 font-size: 5.5rem;
                 margin-bottom: 6rem;
             }
@@ -172,6 +213,11 @@
 
             &::placeholder {
                 color: white;
+            }
+
+            &.error {
+                border-bottom: 1px solid $error-border;
+                background: $error-bg;
             }
         }
 
@@ -185,7 +231,7 @@
             padding-block-end: 0.5rem;
             cursor: pointer;
 
-            @include respond(mini-desktop) {
+            @include respond(tab-port) {
                 font-size: 5.5rem;
                 margin-bottom: 6rem;
             }
@@ -196,6 +242,11 @@
 
             &::placeholder {
                 color: white;
+            }
+
+            &.error {
+                border-bottom: 1px solid $error-border;
+                background: $error-bg;
             }
         }
 
@@ -210,7 +261,7 @@
             margin-block-end: 2rem;
             cursor: pointer;
 
-            @include respond(mini-desktop) {
+            @include respond(tab-port) {
                 font-size: 5.5rem;
                 padding-block: 3rem;
                 margin-block-end: 11rem;
@@ -221,7 +272,7 @@
     .divhidden {
         position: absolute;
         background: #000;
-        padding: 5rem 2rem;
+        padding: 4.5rem 2rem;
         width: calc(100% - 7rem);
         top: 15%;
         border: 1px solid white;
@@ -230,6 +281,7 @@
         & p {
             color: #fff;
             font-size: 1.5rem;
+            line-height: 1.5rem;
         }
 
         & a {
@@ -250,7 +302,7 @@
         flex-direction: column;
         margin-block-end: 1rem;
 
-        @include respond(mini-desktop) {
+        @include respond(tab-port) {
             & a {
                 font-size: 4rem;
                 line-height: initial;
@@ -266,7 +318,11 @@
         a:link {
             color: $color-white;
             text-decoration: none;
-            font-size: 4rem;
+            font-size: 1rem;
+
+            @include respond(tab-port) {
+                font-size: 4rem;
+            }
         }
 
         /* visited link */
