--- a/scss/layout/main-page/_how-section.scss
+++ b/scss/layout/main-page/_how-section.scss
@@ -23,7 +23,7 @@
             width: 86%;
         }
 
-        @include respond(mini-desktop) {
+        @include respond(tab-port) {
             padding-block-start: 10rem;
             padding-block-end: 10rem;
             position: relative;
@@ -40,7 +40,7 @@
         font-size: 1.5rem;
         width: fit-content;
 
-        @include respond(mini-desktop) {
+        @include respond(tab-port) {
             line-height: 6.8rem;
             font-size: 6.8rem;
             margin-block-end: 3rem;
@@ -54,7 +54,7 @@
         margin-block-start: 1rem;
         gap: 1rem;
 
-        @include respond(mini-desktop) {
+        @include respond(tab-port) {
             flex-direction: column;
             align-items: center;
             gap: 5rem;
@@ -68,7 +68,7 @@
         flex-direction: column;
         color: $color-white;
 
-        @include respond(mini-desktop) {
+        @include respond(tab-port) {
             gap: 3rem;
         }
 
@@ -77,7 +77,7 @@
             height: 3rem;
             align-self: center;
 
-            @include respond(mini-desktop) {
+            @include respond(tab-port) {
                 width: 8rem;
                 height: 8rem;
             }
@@ -99,7 +99,7 @@
             line-height: 0.95rem;
             text-align: center;
 
-            @include respond(mini-desktop) {
+            @include respond(tab-port) {
                 font-size: 4rem;
                 line-height: 4.5rem;
                 text-align: center;
