--- a/scss/layout/main-page/_cta-section.scss
+++ b/scss/layout/main-page/_cta-section.scss
@@ -61,34 +61,6 @@
             width: 100%;
             // margin-block-end: 1rem;
         }
-
-        & .message {
-            opacity: 0;
-            width: 100%;
-            margin-block-start: 1rem;
-            margin-block-end: 1rem;
-            text-align: center;
-
-            transition: all 0.3s;
-
-            @include respond(mini-desktop) {
-                font-size: 3.9rem;
-                width: 100%;
-                margin-block-start: 2rem;
-                margin-block-end: 2rem;
-            }
-
-            &.error {
-                opacity: 1;
-                border: 2px solid $error-border;
-                background: $error-bg;
-                text-align: center;
-                border-radius: 20px;
-                padding: 2rem;
-                margin-top: 1rem;
-                line-height: initial;
-            }
-        }
     }
 
     &-input {
@@ -98,7 +70,7 @@
         padding-inline-start: 1rem;
         padding-inline-end: 1rem;
         margin-inline-end: 1rem;
-        border-radius: 31px;
+        // border-radius: 31px;
         border: 2px solid $color-black;
         background: white;
 
@@ -106,7 +78,7 @@
             font-size: 3.9rem;
             width: 100%;
             height: 3.2rem;
-            border-radius: 31px;
+            // border-radius: 31px;
             height: 7.5rem;
             padding-inline-start: 3rem;
             padding-inline-end: 3rem;
