--- a/scss/layout/main-page/_cta-section.scss
+++ b/scss/layout/main-page/_cta-section.scss
@@ -70,7 +70,7 @@
         padding-inline-start: 1rem;
         padding-inline-end: 1rem;
         margin-inline-end: 1rem;
-        // border-radius: 31px;
+        border-radius: 0px;
         border: 2px solid $color-black;
         background: white;
 
@@ -78,7 +78,7 @@
             font-size: 3.9rem;
             width: 100%;
             height: 3.2rem;
-            // border-radius: 31px;
+            border-radius: 0px;
             height: 7.5rem;
             padding-inline-start: 3rem;
             padding-inline-end: 3rem;
@@ -107,6 +107,7 @@
             background-position: left 1rem center;
             background-size: 1em;
             background: white;
+            border-radius: 0px;
 
             &:focus {
                 outline: none;
