add primary color - dark

--- a/scss/layout/main-page/_advantage-section.scss
+++ b/scss/layout/main-page/_advantage-section.scss
@@ -23,7 +23,7 @@
     }
 
     &-title {
-        color: $color-primary;
+        color: $color-primary-dark;
         font-size: 2rem;
         font-family: 'rubikBold', sans-serif;
         line-height: initial;
@@ -50,7 +50,7 @@
     }
 
     &-dont-miss {
-        color: $color-primary;
+        color: $color-primary-dark;
         font-family: 'rubikBold', sans-serif;
         font-size: 2rem;
         line-height: initial;
