--- a/scss/abstract/_variables.scss
+++ b/scss/abstract/_variables.scss
@@ -2,6 +2,7 @@
 // $color-primary: #67d2c4;
 $color-primary-light: #34bbf7;
 $color-primary: #3fca61;
+$color-primary-dark: #299F42;
 $color-primary-part-transparent: #f0f6ff;
 
 $color-secondary: #FEFE00;
