add primary color - dark

--- a/scss/abstract/_variables.scss
+++ b/scss/abstract/_variables.scss
@@ -1,7 +1,8 @@
 //colors
 // $color-primary: #67d2c4;
 $color-primary-light: #34bbf7;
-$color-primary: #3fca61;
+// $color-primary: #3fca61;
+$color-primary: #42C95E;
 $color-primary-dark: #299F42;
 $color-primary-part-transparent: #f0f6ff;
 
