change carousel box-shadow

--- a/scss/layout/main-page/_carousel-section.scss
+++ b/scss/layout/main-page/_carousel-section.scss
@@ -41,7 +41,7 @@
         @include respond(tab-port) {
             line-height: 4.5rem;
             font-size: 4.5rem;
-            padding-inline-start: 0;
+            padding-inline-start: 5rem;
             margin-block-end: 5rem;
             width: 100%;
             text-align: center;
