--- a/scss/layout/main-page/_top-section.scss
+++ b/scss/layout/main-page/_top-section.scss
@@ -1,11 +1,23 @@
 .bg {
-    position: absolute;
+    position: fixed;
     width: inherit;
     height: 100vh;
-    background: url(../images/bg-desktop.webp) no-repeat center center fixed;
+    background: url(../images/bg-desktop.webp) no-repeat fixed;
     background-size: cover;
+    background-position: 8rem;
     z-index: -1;
     pointer-events: none;
+
+
+    // min-height: 100vh;
+    // min-width: 1024px;
+
+    /* Set up proportionate scaling */
+    // width: 73%;
+    // height: auto;
+
+    // top: 0;
+    // right: 0;
 
     @include respond(tab-port) {
         background: url(../images/bg-mobile.webp) no-repeat center center fixed;
