fix bg position

--- a/scss/layout/main-page/_top-section.scss
+++ b/scss/layout/main-page/_top-section.scss
@@ -22,6 +22,7 @@
     @include respond(tab-port) {
         background: url(../images/bg-mobile.webp) no-repeat center center fixed;
         background-position: top;
+        height: 400vw;
     }
 
     &-float {
